--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     db:
         image: mysql:latest
         env_file: .env
-        volumes:
-            - db-data:/var/lib/mysql
-            - ./db-data/mysql.dump.sql:/docker-entrypoint-initdb.d/install_wordpress.sql
+#        volumes:
+#            - db-data:/var/lib/mysql
+#            - ./db-data/mysql.dump.sql:/docker-entrypoint-initdb.d/install_wordpress.sql
  
 volumes:
     db-data:
