--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
             - ./theme-sync/your_theme:/var/www/html/wp-content/themes/your_theme # Change your_theme
             - ./wp-plugin-template:/var/www/html/wp-content/plugins/wp-plugin-template # Change wp-plugin-template
     db:
-        image: mysql:latest
+        image: mysql:5.7
         env_file: .env
 #        volumes:
 #            - db-data:/var/lib/mysql
